; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/extr_pxa168_eth.c_pxa168_eth_collect_events.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/extr_pxa168_eth.c_pxa168_eth_collect_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pxa168_eth_private = type { i32 }
%struct.net_device = type { i32 }

@INT_CAUSE = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@ICR_TXBUF_H = common dso_local global i32 0, align 4
@ICR_TXBUF_L = common dso_local global i32 0, align 4
@WORK_TX_DONE = common dso_local global i32 0, align 4
@ICR_RXBUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pxa168_eth_private*, %struct.net_device*)* @pxa168_eth_collect_events to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pxa168_eth_collect_events(%struct.pxa168_eth_private* %0, %struct.net_device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pxa168_eth_private*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pxa168_eth_private* %0, %struct.pxa168_eth_private** %4, align 8
  store %struct.net_device* %1, %struct.net_device** %5, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.pxa168_eth_private*, %struct.pxa168_eth_private** %4, align 8
  %9 = load i32, i32* @INT_CAUSE, align 4
  %10 = call i32 @rdl(%struct.pxa168_eth_private* %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @IRQ_NONE, align 4
  store i32 %14, i32* %3, align 4
  br label %41

15:                                               ; preds = %2
  %16 = load %struct.pxa168_eth_private*, %struct.pxa168_eth_private** %4, align 8
  %17 = load i32, i32* @INT_CAUSE, align 4
  %18 = load i32, i32* %6, align 4
  %19 = xor i32 %18, -1
  %20 = call i32 @wrl(%struct.pxa168_eth_private* %16, i32 %17, i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @ICR_TXBUF_H, align 4
  %23 = load i32, i32* @ICR_TXBUF_L, align 4
  %24 = or i32 %22, %23
  %25 = and i32 %21, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %15
  %28 = load i32, i32* @WORK_TX_DONE, align 4
  %29 = load %struct.pxa168_eth_private*, %struct.pxa168_eth_private** %4, align 8
  %30 = getelementptr inbounds %struct.pxa168_eth_private, %struct.pxa168_eth_private* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = or i32 %31, %28
  store i32 %32, i32* %30, align 4
  store i32 1, i32* %7, align 4
  br label %33

33:                                               ; preds = %27, %15
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @ICR_RXBUF, align 4
  %36 = and i32 %34, %35
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %33
  store i32 1, i32* %7, align 4
  br label %39

39:                                               ; preds = %38, %33
  %40 = load i32, i32* %7, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %13
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @rdl(%struct.pxa168_eth_private*, i32) #1

declare dso_local i32 @wrl(%struct.pxa168_eth_private*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
